<resources>
    <string name="google_maps_api_key">AIzaSyA1HWwA18lCOsv5dMqWlf67MF1Xrxe2tMs</string>
    <string name="app_name">Trail Safe</string>
    <string name="destination">Destination</string>
    <string name="mode_of_transport">Mode of Transport</string>
    <string name="nameoftheapp">Trail Safe</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="next">next</string>
    <string name="go">Go</string>
    <string name="start">Start</string>
    <string name="Start_Point">Start Point</string>
    <string name="Finish_Point">End Point</string>
    <string name="trailsafe">Trail Safe</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_have_arrived_on_time">You Have Arrived On Time</string>
    <string name="title_activity_maps">Map</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="title_activity_2">Activity2</string>
    <string name="title_activity_recording_">Recording_Activity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_recording_screen">recording_screen</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="sign_in_login">Login</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_up_hint">Sign up here</string>
    <string name="distance_units">Distance units</string>
    <string name="preferences">Preferences</string>
    <string name="about">About</string>
    <string name="contact_us">Contact us</string>
    <string name="register_email"> Email </string>
    <string name="register_password">Password</string>
    <string name="register_button">Register</string>
    <string name="here_underlined"><u>here</u></string>
    <string-array name="Spinner_transport">
        <item>Walking</item>
        <item>Jogging</item>
        <item>Cycling</item>
    </string-array>

    <string-array name="units">
        <item>M</item>
        <item>KM</item>

    </string-array>

    <string-array name="timer_length">
        <item>1hr</item>
        <item>2hrs</item>
        <item>3hrs</item>

    </string-array>

</resources>
