<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/loginscreen_background">

    <EditText
        android:id="@+id/login_email"
        android:layout_width="280dp"
        android:layout_height="44dp"
        android:autofillHints=""
        android:background="@drawable/input_greyfield"
        android:ems="10"
        android:hint="@string/email_login"
        android:inputType="textEmailAddress"
        android:textColor="@color/lightGrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.299" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="280dp"
        android:layout_height="44dp"
        android:autofillHints=""
        android:background="@drawable/input_greyfield"
        android:ems="10"
        android:hint="@string/password_login"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email"
        app:layout_constraintVertical_bias="0.059" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="162dp"
        android:layout_height="44dp"
        android:background="@drawable/button_default"
        android:fontFamily="sans-serif-medium"
        android:includeFontPadding="false"
        android:text="@string/sign_in_login"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.265"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/title"
        android:layout_width="242dp"
        android:layout_height="85dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/alegreya_sans_sc"
        android:gravity="center"
        android:text="@string/trailsafe"
        android:textColor="@color/colorPrimaryDark"
        android:textIsSelectable="false"
        android:textSize="50sp"
        app:autoSizeTextType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_signup"
        android:layout_width="71dp"
        android:layout_height="19dp"
        android:layout_marginTop="48dp"
        android:background="@color/std_white"
        android:text="@string/sign_up_hint"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toEndOf="@+id/button_login"
        app:layout_constraintTop_toBottomOf="@+id/login_password" />

</androidx.constraintlayout.widget.ConstraintLayout>